# RT-Basics-Projects

./: README.md  main.cpp
RTWeek/: CMakeLists.txt  main.cpp
RTWeek/include/: Camera.hpp  Sphere.hpp  aaboundbox.hpp  bound_vol_hier.hpp  common_utils.h  constant_medium.hpp  definitions.h  geometry.hpp  geometry_list.h  interval.hpp  material.hpp  perlin.hpp  quad.hpp  ray.h  rtw_image.hpp  texture.hpp
RTWeek/src/: Camera.cpp  Sphere.cpp  aaboundbox.cpp  bound_vol_hier.cpp  constant_medium.cpp  geometry.cpp  interval.cpp  material.cpp  perlin.cpp  quad.cpp  rtw_image.cpp  texture.cpp
RTWeekend/: CMakeLists.txt  main.cpp
RTWeekend/include/: Camera.hpp  Sphere.hpp  color.hpp  common_utils.h  definitions.h  geometry.h  geometry_list.h  interval.hpp  material.hpp  ray.h  vec3.h
RTWeekend/src/: Camera.cpp  Sphere.cpp  color.cpp  interval.cpp  material.cpp
headers/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
