# CMakeList.txt : CMake project for RTWeek, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("RTWeek")

# Add source to this project's executable.
add_executable (RTWeek "main.cpp" "src/interval.cpp" "src/Camera.cpp" "include/color.hpp" "include/common_utils.h" "src/color.cpp" "include/material.hpp" "src/Sphere.cpp" "src/material.cpp" "src/aaboundbox.cpp" "src/bound_vol_hier.cpp" "src/texture.cpp" "src/rtw_image.cpp" "src/perlin.cpp" "src/quad.cpp" "src/geometry.cpp" "src/constant_medium.cpp")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET RTWeek PROPERTY CXX_STANDARD 20)
endif()

add_custom_command( TARGET RTWeek POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory 
${CMAKE_SOURCE_DIR}/assets/textures 
${CMAKE_BINARY_DIR}/assets/textures )

# TODO: Add tests and install targets if needed.
